--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -49,6 +49,10 @@ input {
     box-sizing: border-box;
 }
 
+input[type="radio"] {
+    width: 2rem;   
+}
+
 label {
     color: var(--text-base-light);  
 }
