--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -50,7 +50,21 @@ input {
 }
 
 input[type="radio"] {
-    width: 2rem;   
+    appearance: none;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    border: 1px solid var(--color-button); 
+}
+
+input[type="radio"]:checked::before {
+    content: "";
+    display: block;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: var(--color-button);
+    margin:-1rem;
 }
 
 label {
