--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -130,7 +130,7 @@ ul.dropdown-menu {
     background-color: var(--background-navbar);
     margin-block: 1rem;
     width: 12.9rem;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     font-size: 3.5rem;
@@ -138,6 +138,11 @@ ul.dropdown-menu {
     margin-inline: -3rem;
 }
 
+/* quando a corrida estiver ativa -> js */
+.drop-down.active ul.dropdown-menu{
+    display: flex;
+
+}
 
 /* MENU HAMBURGER  */
 .hamburger {
