--- a/views/Css/cadastro.css
+++ b/views/Css/cadastro.css
@@ -33,7 +33,7 @@
 .confirmaEmail,
 .senha,
 .confirmaSenha{
-    width: 100%;
+    width: 24rem; /*antes estava 100%*/
     display: flex;
     flex-direction: column;
     margin-top: 1rem;
@@ -50,7 +50,7 @@
 }
 
 .bt-cadastrar{
-    width: 100%;
+    width: 24rem;/*antes estava 100%*/
     display: flex;
     justify-content: center;
     margin-top: 1rem;
