--- a/views/Css/login.css
+++ b/views/Css/login.css
@@ -48,11 +48,11 @@ h2{
 }
 
 /* formulario */
-form {
+.formulario {
     display: flex;
     font-size: 1.7rem;
     margin-block: 4rem;
-    flex-direction: column; /*mudei isso */
+    flex-direction: column;
     align-items: center;
     gap: 3.5rem;
 }
@@ -67,101 +67,13 @@ form {
     gap: 1.2rem;
 }
 
-.bt-cadastre{
-    margin-block: -2rem;
-    margin-inline: 1.5rem
-}
-
 .emails label,
-.passwords label {
+.passwords label, .passwords a {
     align-self: flex-start; /* Alinha os rótulos à esquerda */
-    margin-left: 10px; /* Adiciona um espaço entre o rótulo e o input */
+    margin-left: .1rem; /* Adiciona um espaço entre o rótulo e o input */
 }
 
 /* Ajuste da largura dos inputs dentro das divs .emails e .passwords */
 .emails input, .passwords input {
-    width: calc(100% - -25px); /* Ajusta a largura para considerar a margem esquerda do rótulo e a largura do link "Esqueci minha senha" */
-}
-
-
-
-/* Estilo para o link "Esqueci minha senha" */
-.passwords a {
-    align-self: flex-start; /* Alinha o link à esquerda */
-    margin-left: 10px; /* Adiciona um espaço entre o link e o input */
-}
-
-
-/* Layout Responsivo */
-
-/* max-width: 425px argura da tela for igual ou menor que 768 pixels*/
-@media (min-width: 426px ) {
-    
-    /* Centralizando elementos */
-    .bt-go-in, .bt-cadastre{
-        width: calc(51% - 38px); /*largura dos botões para os dois ficarem no mesmo tamanho*/
-        position: absolute;
-        display: inline-grid;
-        margin-block: -1rem;
-    }
-    /* botão de entra */
-    .passwords .bt-go-in{
-        align-self: first baseline;
-    }
-    
-    
-    /* alinhando com o bt de cadastrar - altura */
-    .bt-go-in {
-        margin-top: 25.7rem;
-        margin-left: -48%;
-    }
-    .bt-cadastre{
-        
-        margin-inline: 1.5rem;
-    }
-    
-}
-@media (min-width: 472px ) {
-    
-    form{
-        display: flex;
-        flex-direction: row;
-        align-items: baseline;
-        padding-inline: 1.6rem;
-    }
-
-    .bt-go-in {
-        margin-top: 14.3rem;
-        margin-left: -2%;
-    }
-}
-
-/* alinhando elemento ao lado da imagem */
-
-/* min-width: 768px largura da tela for igual ou maior que 768 pixels */
-@media (min-width: 600px ) {
-
-    form{
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        align-items: flex-end;
-    }
-    
-    .bt-go-in {
-        display: inline-grid;
-        position: absolute;
-        margin-top: none;
-        margin-left: none;
-       }
-}
-
-/* colocando o form em block na direita */
-@media (min-width: 768px ) {
-
-       form{
-        display: flex;
-        justify-content: space-between;
-       }
-
+    width:24rem; /* Ajusta a largura para considerar a margem esquerda do rótulo e a largura do link "Esqueci minha senha" */
 }
