--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -42,7 +42,7 @@ input {
     border-width: 2px;
     border-radius: 14px;
     border-color: var(--color-button);
-    width: 100%;
+    width: 24rem;
     padding: 1.3rem;
     background: var(--background-campos);
     outline: none;
@@ -84,7 +84,7 @@ a{
 button, .bt-cadastre {
     display: block;
     padding: 1.3rem;
-    width: 90%;
+    width: 24rem;
     border: none;
     border-radius: 8px;
     font-size: 1.6rem;
