--- a/views/Css/alterarSenha.css
+++ b/views/Css/alterarSenha.css
@@ -1,6 +1,21 @@
 .container-conteudo {
     padding: 2rem;
 }
+/* Bacground img */
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 45em;
+    background-image: url(/sistemackc/views/Img/ImgTelas/alteraSenha.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center; 
+    opacity: 0.5; 
+    filter: grayscale(100%) brightness(10%);
+    z-index: -1;
+}
 
 .container-feedback {
     text-align: center;
