--- a/views/Css/cadastro.css
+++ b/views/Css/cadastro.css
@@ -3,6 +3,23 @@
     justify-content: space-between;
 }
 
+/* Background img */
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80em;
+    background-image: url(/sistemackc/views/Img/ImgTelas/cadastroUsuario.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center; 
+    opacity: 0.5; 
+    filter: grayscale(100%) brightness(10%);
+    z-index: -1;
+}
+
+
 .container{
     display: flex;
     flex-direction: column;
