--- a/views/Css/crudUsuario.css
+++ b/views/Css/crudUsuario.css
@@ -2,6 +2,22 @@
     padding: 2rem;
 }
 
+/* Background da tela de perfil Usuário */
+.background-imagePerfilUser{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80em;
+    background-image: url(/sistemackc/views/Img/ImgTelas/perfilUsuario.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center; 
+    opacity: 0.5; 
+    filter: grayscale(100%) brightness(10%);
+    z-index: -1;
+}
+
 .container-feedback {
     text-align: center;
     font-size: 2rem;
