--- a/views/Css/kartodromo.css
+++ b/views/Css/kartodromo.css
@@ -1,5 +1,17 @@
-body {
-    background-color: var(--background-principal);
+/* Background img */
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80em;
+    background-image: url(/sistemackc/views/Img/ImgTelas/kartodromoUsuario.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center; 
+    opacity: 0.5; 
+    filter: grayscale(100%) brightness(10%);
+    z-index: -1;
 }
 
 .titulo {
@@ -23,7 +35,7 @@ body {
     border: 2px solid var(--color-button);
     border-radius: 14px;
     max-width: 280px;
-    height: 700px;
+    height: 600px;
     text-align: center;
     padding: 1.5rem;
 }
@@ -84,7 +96,7 @@ body {
 
 @media (min-width: 375px) {
     .card {
-        height: 650px;
+        height: 600px;
         max-width: 335px;
     }
 }
@@ -96,7 +108,7 @@ body {
     }
 
     .card {
-        height: 700px;
+        height: 620px;
     }
 
     .infoLocalizacao {
