--- a/views/Css/kartodromo.css
+++ b/views/Css/kartodromo.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 80em;
+    height: 95em;
     background-image: url(/sistemackc/views/Img/ImgTelas/kartodromoUsuario.jpg);
     background-repeat: no-repeat;
     background-size: cover; 
@@ -115,5 +115,15 @@
         height: 100px;
         word-wrap: break-word;
         overflow-y: auto;
+    }
+
+    .background-image {
+        height: 55em;
+    }
+}
+
+@media (min-width: 1440px) {
+    .background-image {
+        height: 55em;
     }
 }
