--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -29,6 +29,7 @@
     --categoria-ddl-livre: #069B0C;
     --categoria-ckc-95: #B5CC18;
     --categoria-ckc-110: #CC5918;
+    --color-cmp: #eb3838;
     --background-cards: rgba(192, 192, 192, 0.15);
 }
 
